:zap: added new datatype to differentiate between raw and processed images, also added new datatype for the methods' response
