# gen/http/openapi3.yaml
@@ -8,6 +8,56 @@ servers:
   description: Default server for Satellite Image Loader API
 paths:
   /image-loader/api/v1/images:
+    get:
+      tags:
+      - Images
+      summary: Get raw satellite image Images
+      description: get a raw image from the database
+      operationId: Images#Get raw satellite image
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GetRawSatelliteImageRequestBody'
+            example:
+              file_name: Quia quos eos ut unde sed dolorum.
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GoaResult'
+              example:
+                code: Tempore odit quibusdam.
+                description: Facilis et debitis expedita.
+        "400":
+          description: ""
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                fault: true
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: true
+                timeout: true
+        "500":
+          description: ""
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                fault: false
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: false
+                timeout: true
     post:
       tags:
       - Images
@@ -21,22 +71,76 @@ paths:
             schema:
               $ref: '#/components/schemas/LoadNewSatelliteImageRequestBody'
             example:
-              date_time: "1994-09-19T16:01:12Z"
+              file_name: Voluptates architecto.
+              id: Consequuntur non placeat ab.
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GoaResult'
+              example:
+                code: Ut eos occaecati eligendi sapiente ut enim.
+                description: Eligendi ipsum ipsa.
+        "400":
+          description: ""
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                fault: false
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: true
+                timeout: false
+        "500":
+          description: ""
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                fault: false
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: true
+                timeout: false
+  /image-loader/api/v1/images/processed:
+    post:
+      tags:
+      - Images
+      summary: Load new processed satellite image Images
+      description: loads a new image into the database
+      operationId: Images#Load new processed satellite image
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoadNewProcessedSatelliteImageRequestBody'
+            example:
+              date_time: "2008-09-18T10:35:05Z"
+              file_name: Reprehenderit tempore nesciunt aut.
               geographic_information:
                 coordinates:
-                  Sit facilis qui et voluptas.: 0.45731705303115716
-                tag_name: Nemo occaecati aperiam quis autem.
-              id: Harum architecto quo molestias qui.
+                  Ex exercitationem aut reiciendis quod voluptate incidunt.: 0.7392343776263494
+                  Molestiae sed molestias praesentium rerum.: 0.3908551358201754
+                  Qui qui iusto praesentium.: 0.19181675265671314
+                tag_name: Incidunt odit tempore.
+              id: Sunt occaecati ut qui libero similique dolores.
               normalized_indexes:
                 ndvi:
-                - 0.18711642837954914
-                - 0.09177180070813358
-                - 0.7808423638626252
+                - 0.6127802172492277
+                - 0.004560762359582058
+                - 0.480367361557016
                 ndwi:
-                - 0.7146847364477503
-                - 0.540422727294012
-                - 0.5322622263700029
-                - 0.299780450041929
+                - 0.08253636129242008
+                - 0.030755381445945546
+                - 0.659276994468877
       responses:
         "200":
           description: ""
@@ -63,11 +167,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                fault: false
+                fault: true
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: false
+                temporary: true
                 timeout: false
 components:
   schemas:
@@ -77,7 +181,7 @@ components:
         fault:
           type: boolean
           description: Is the error a server-side fault?
-          example: false
+          example: true
         id:
           type: string
           description: ID is a unique identifier for this particular occurrence of the problem.
@@ -99,12 +203,12 @@ components:
           description: Is the error a timeout?
           example: true
       example:
-        fault: true
+        fault: false
         id: 123abc
         message: parameter 'p' must be an integer
         name: bad_request
         temporary: false
-        timeout: true
+        timeout: false
       required:
       - name
       - id
@@ -119,50 +223,96 @@ components:
           type: object
           description: Coordinates of the satellite image
           example:
-            Accusamus maiores.: 0.7609016163545076
-            Aliquid autem iure et.: 0.9257392144947013
+            Culpa dolores debitis facilis saepe blanditiis.: 0.4398902985737806
+            Modi aut.: 0.5865869017188681
+            Ullam itaque rem nihil ducimus.: 0.9531672097447323
           additionalProperties: true
         tag_name:
           type: string
           description: Non-forgetable identifier
-          example: Sit eum rerum dolores ullam aliquid.
+          example: Accusantium iusto in reprehenderit quae aut.
       example:
         coordinates:
-          Ut non voluptates quia quis pariatur.: 0.8481271776795617
-        tag_name: Velit et dolores.
-    LoadNewSatelliteImageRequestBody:
+          Et provident totam velit.: 0.6265644306664542
+          Perferendis molestias molestiae eos.: 0.6094055122873676
+          Voluptas mollitia minima ipsum magnam tempora.: 0.06424249512309911
+        tag_name: Quod omnis quisquam.
+    GetRawSatelliteImageRequestBody:
+      type: object
+      properties:
+        file_name:
+          type: string
+          description: File name of the raw image
+          example: Corrupti explicabo voluptatum ex.
+      example:
+        file_name: Consequatur possimus.
+    GoaResult:
+      type: object
+      properties:
+        code:
+          type: string
+          description: The operation code
+          example: Sunt sunt.
+        description:
+          type: string
+          description: The operation description
+          example: Voluptatibus quisquam laudantium cumque hic.
+      example:
+        code: Quo id dolorum minima qui.
+        description: Nemo sint facilis eius omnis alias.
+    LoadNewProcessedSatelliteImageRequestBody:
       type: object
       properties:
         date_time:
           type: string
           description: When was the image taken
-          example: "1997-10-13T11:16:22Z"
+          example: "2003-11-25T02:00:19Z"
           format: date-time
+        file_name:
+          type: string
+          description: File name of the processed image
+          example: Enim quia doloremque nulla.
         geographic_information:
           $ref: '#/components/schemas/GeographicInformation'
         id:
           type: string
           description: The image identifier
-          example: Maxime rerum fugiat atque.
+          example: Consequuntur minus voluptatem et ut.
         normalized_indexes:
           $ref: '#/components/schemas/NormalizedIndexes'
       example:
-        date_time: "1982-05-20T05:40:47Z"
+        date_time: "2006-09-27T17:41:25Z"
+        file_name: Impedit dolores iste et et.
         geographic_information:
           coordinates:
-            Sit facilis qui et voluptas.: 0.45731705303115716
-          tag_name: Nemo occaecati aperiam quis autem.
-        id: Officia hic.
+            Ex exercitationem aut reiciendis quod voluptate incidunt.: 0.7392343776263494
+            Molestiae sed molestias praesentium rerum.: 0.3908551358201754
+            Qui qui iusto praesentium.: 0.19181675265671314
+          tag_name: Incidunt odit tempore.
+        id: Nemo maiores tenetur voluptatem dolore.
         normalized_indexes:
           ndvi:
-          - 0.18711642837954914
-          - 0.09177180070813358
-          - 0.7808423638626252
+          - 0.6127802172492277
+          - 0.004560762359582058
+          - 0.480367361557016
           ndwi:
-          - 0.7146847364477503
-          - 0.540422727294012
-          - 0.5322622263700029
-          - 0.299780450041929
+          - 0.08253636129242008
+          - 0.030755381445945546
+          - 0.659276994468877
+    LoadNewSatelliteImageRequestBody:
+      type: object
+      properties:
+        file_name:
+          type: string
+          description: File name of the raw image
+          example: Sapiente voluptatum repellendus maxime voluptatem error.
+        id:
+          type: string
+          description: The image identifier
+          example: Eligendi excepturi aliquid nemo.
+      example:
+        file_name: Voluptatum impedit ducimus sequi sed.
+        id: Voluptatum numquam voluptatem.
     NormalizedIndexes:
       type: object
       properties:
@@ -170,29 +320,30 @@ components:
           type: array
           items:
             type: number
-            example: 0.7567731912282232
+            example: 0.11220735881259836
             format: double
           description: Normalized difference vegetation index
           example:
-          - 0.06838056104513822
-          - 0.11734541456440235
+          - 0.532882137886902
+          - 0.06608277721520363
         ndwi:
           type: array
           items:
             type: number
-            example: 0.10973095008020324
+            example: 0.19835752019624622
             format: double
           description: Normalized difference water index
           example:
-          - 0.1553588273184696
-          - 0.7347608461397988
+          - 0.039887244866758154
+          - 0.6883018275285391
+          - 0.3154289468512323
+          - 0.8542093708386505
       example:
         ndvi:
-        - 0.23884558899258065
-        - 0.9199595062652263
-        - 0.5827098159219002
+        - 0.8917878637736515
+        - 0.37381041021893197
+        - 0.8252758370390869
         ndwi:
-        - 0.6777854591929429
-        - 0.03476154544671488
-        - 0.9574079529023375
-        - 0.4037711288410709
+        - 0.9737764394796617
+        - 0.2520012684284545
+        - 0.4102395363451464
